--- a/layouts/post.html
+++ b/layouts/post.html
@@ -16,6 +16,9 @@
   <time>{{ date }}</time>
   {{{ contents }}}
 
+  <a href="https://twitter.com/{{author.twitter}}" target="_blank">{{author.name}}</a>
+
+
   <footer>
     <p>Generated with {{ generator }} &mdash; <a href="{{ url }}">{{ url }}</a></p>
   </footer>
