--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -14,6 +14,14 @@
   <h1>{{ title }}</h1>
   <p>{{ description }}</p>
 
+  {{#if posts.length}}
+    <ul>
+    {{#each posts}}
+      <li><a href="/{{ path }}">{{ title }}</a></li>
+    {{/each}}
+    </ul>
+  {{/if}}
+
   {{{ contents }}}
 
   <footer>
