--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>{{ title }}</title>
   <meta name="description" content="{{ description }}">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.7.0/styles/default.min.css">
 </head>
 <body>
   <header>
@@ -26,6 +27,7 @@
 
   <footer>
     <p>Generated with {{ generator }} &mdash; <a href="{{ url }}">{{ url }}</a></p>
+    <p>Last update: {{ date }}</p>
   </footer>
 
 </body>
