many changes in build script, created drafts and planne

--- a/layouts/post.html
+++ b/layouts/post.html
@@ -17,6 +17,8 @@
   <time>{{ date }}</time>
   {{{ contents }}}
 
+  <!-- TODO: place gravatar here by XHR
+   -->
   <a href="https://twitter.com/{{author.twitter}}" target="_blank">{{author.name}}</a>
 
 
