--- a/src/metalsmith/layouts/layout.html
+++ b/src/metalsmith/layouts/layout.html
@@ -27,13 +27,13 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/about.html">About</a>
-          <li>
+          </li>
         </ul>
       </div>
     </nav>
     
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/home-bg.jpg')">
+    <header class="masthead" style="background-image: url('/img/home-bg.jpg')">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
