--- a/src/metalsmith/layouts/layout.html
+++ b/src/metalsmith/layouts/layout.html
@@ -89,7 +89,7 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <ul class="list-inline text-center">
               <li class="list-inline-item">
-                <a href="https://twitter.com/{{author.twitter}}" target="_blank">
+                <a href="https://twitter.com/{{metadata.author.twitter}}" target="_blank">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -97,15 +97,15 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="{{metadata.author.rss}}" target="_blank">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                    <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
                   </span>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="{{author.github}}" target="_blank">
+                <a href="{{metadata.author.github}}" target="_blank">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -113,7 +113,7 @@
                 </a>
               </li>
             </ul>
-            <p class="copyright text-muted">Copyright &copy; {{ author.name }} 2017</p>
+            <p class="copyright text-muted">Copyright &copy; {{ metadata.author.name }} 2017</p>
           </div>
         </div>
       </div>
