--- a/src/metalsmith/layouts/post.html
+++ b/src/metalsmith/layouts/post.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>{{ blogtitle }} - {{ title }}</title>
-  <meta name="description" content="{{ blogdescription }}">
+  <title>{{ metadata.title }} - {{ title }}</title>
+  <meta name="description" content="{{ metadata.description }}">
   
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.7.0/styles/default.min.css">
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -15,7 +15,7 @@
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-      <a class="navbar-brand" href="index.html">{{ blogtitle }}</a>
+      <a class="navbar-brand" href="index.html">{{ metadata.title }}</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fa fa-bars"></i>
@@ -105,7 +105,7 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <ul class="list-inline text-center">
               <li class="list-inline-item">
-                <a href="https://twitter.com/{{author.twitter}}" target="_blank">
+                <a href="https://twitter.com/{{metadata.author.twitter}}" target="_blank">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -113,15 +113,15 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="{{metadata.author.rss}}" target="_blank">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                    <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
                   </span>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="{{author.github}}" target="_blank">
+                <a href="{{metadata.author.github}}" target="_blank">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -129,7 +129,7 @@
                 </a>
               </li>
             </ul>
-            <p class="copyright text-muted">Copyright &copy; {{ author.name }} 2017</p>
+            <p class="copyright text-muted">Copyright &copy; {{ metadata.author.name }} 2017</p>
           </div>
         </div>
       </div>
