--- a/src/metalsmith/layouts/layout.html
+++ b/src/metalsmith/layouts/layout.html
@@ -9,7 +9,7 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="css/styles.css" rel="stylesheet">
+  <link href="/css/styles.css" rel="stylesheet">
   
 </head>
 <body>
@@ -121,6 +121,6 @@
     <!-- Last update: {{ date }} -->
 
     <!-- Custom scripts for this template -->
-    <script src="js/scripts.js"></script>
+    <script src="/js/{{ metadata.scripts }}"></script>
 </body>
 </html>
