about, changed title and fixed links

--- a/src/metalsmith/layouts/post.html
+++ b/src/metalsmith/layouts/post.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>{{ metadata.title }} - {{ title }}</title>
-  <meta name="description" content="{{ metadata.description }}">
+  <meta name="description" content="{{ description }}">
   
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.7.0/styles/default.min.css">
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -15,7 +15,7 @@
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-      <a class="navbar-brand" href="index.html">{{ metadata.title }}</a>
+      <a class="navbar-brand" href="/">{{ metadata.title }}</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fa fa-bars"></i>
